--- a/style.css
+++ b/style.css
@@ -27,8 +27,8 @@ body{
 
 .card_back,
 .card_front{
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    height: 90%;
     position: absolute;
     display: flex;
     justify-content: center;
@@ -102,7 +102,8 @@ body{
     }
     .card{
         width: 60px;
-        height: 60px;}
+        height: 60px;
+        font-size:12px;}
     .icon
 {
     width: 30px;
