--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ body{
 }
 
 .card{
-    width: 100px;
-    height: 100px;
+    width: 110px;
+    height: 110px;
     position: relative;
 
     -webkit-transform-style: preserve-3d;
@@ -27,8 +27,8 @@ body{
 
 .card_back,
 .card_front{
-    width: 80%;
-    height: 80%;
+    width: 85%;
+    height: 85%;
     position: absolute;
     display: flex;
     justify-content: center;
@@ -102,8 +102,9 @@ body{
     }
     .card{
         width: 60px;
-        height: 60px;
-        font-size:12px;}
+        height: 60px;}
+    .card_back{
+    font-size:20px;}
     .icon
 {
     width: 30px;
